SNAPSHOT :: v0.0.4-SNAPSHOT - Lifecycle, modify tests